Fixes #337 - Fix settings dialog content alignment in mobile screens (#338)
Fixes #337 - fixed padding

Fixes #337 - Fix settings dialog content alignment in mobile screens

Fixes #337 - Fixed btn width

Fixes #337 - Fix settings dialog content alignment on mobile screens

--- a/src/components/ChatApp/ChatApp.css
+++ b/src/components/ChatApp/ChatApp.css
@@ -510,7 +510,16 @@ em{
   margin: 0 auto;
 }
 
-@media screen and (max-width: 768px) {
+.settingsDialog {
+  text-align: left;
+  padding-left: 25%;
+}
+
+.settingsBtns {
+  margin-bottom: 16px;
+}
+
+@media only screen and (min-width: 0px) and (max-width: 768px){
   .settingsForm {
     font-size: 14px;
   }
@@ -522,6 +531,15 @@ em{
   }
   .settingsForm h4{
     font-size: 14px;
+  }
+  .settingsDialog {
+    text-align: left;
+    padding-left: 10%;
+    line-height: 80%;
+  }
+  .settingsBtns{
+    margin-bottom: 16px;
+    width: 85%;
   }
 }
 
